--- a/src/main/webapp/WEB-INF/css/styles.css
+++ b/src/main/webapp/WEB-INF/css/styles.css
@@ -17,6 +17,8 @@ body{
 }
 
 .todo-wrapper{
+    overflow-y: scroll !important;
+    height: 100px;
     width: 400px;
     max-width: 100%;
     min-height: 500px;
@@ -27,7 +29,6 @@ body{
     -webkit-box-shadow: 0 0 15px 0 rgba(0,0,0,0.05);
     box-shadow: 0 0 15px 0 rgba(0,0,0,0.05);
     background-color: #f4f7fc;
-    overflow: hidden;
     position: relative;
 }
 
@@ -149,7 +150,7 @@ ul.todo-list li{
     margin: 10px 0;
     background: #e0e8f5;
     border-radius: 3px;
-    padding-left: 38px; /* custom checkbox width + 16 */
+    padding-left: 0px; /* custom checkbox width + 16 */
     padding-top: 12px;
     padding-bottom: 12px;
     padding-right: 49px; /* delete button + 5 */
